EXTRA_DIST = \
	as-ac-expand.m4 \
	codeset.m4 \
	gettext.m4 \
	glibc21.m4 \
	iconv.m4 \
	intltool.m4 \
	lcmessage.m4 \
	lib-ld.m4 \
	lib-link.m4 \
	lib-prefix.m4 \
	libtool.m4 \
	ltoptions.m4 \
	ltsugar.m4 \
	ltversion.m4 \
	lt~obsolete.m4 \
	nls.m4 \
	po.m4 \
	progtest.m4

MAINTAINERCLEANFILES = Makefile.in

